<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_back_button"
        android:contentDescription="@string/back_navigation_button" />

    <ImageView
        android:id="@+id/btnNotification"
        android:layout_width="72dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_notifications"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/notification_button" />

    <TextView
        android:id="@+id/tvPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/btnBack"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
    
    <RelativeLayout
        android:id="@+id/rlCard"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:elevation="10dp"
        android:background="@drawable/blue_card_background"
        android:layout_below="@+id/tvPayment"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@mipmap/mastercard"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/mastercard_image" />

        <TextView
            android:id="@+id/tvCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardImage"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="monospace"
            android:text="@string/_5270_7777_8888_9999"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvCardHolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_holder"
            android:textAllCaps="true"
            android:textSize="10sp"
            android:layout_below="@+id/tvCardNumber"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/tvExpiryDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCardNumber"
            android:layout_marginStart="275dp"
            android:layout_marginTop="32dp"
            android:text="@string/exp_date"
            android:textColor="@color/grey"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvCardHolderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/deeksha_kundabarandady"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:layout_below="@+id/tvCardHolder"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_01_28"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_marginStart="275dp"
            android:layout_below="@id/tvExpiryDate"
            android:layout_marginTop="8dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/etRelativeLayout"
        android:background="@color/white"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlCard"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">


        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/_5270_7777_8888_9999"
            android:padding="4dp"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="24dp"
            android:layout_alignEnd="@id/etCardNumber"
            android:layout_alignParentTop="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="30dp"
            android:src="@mipmap/mastercard" />

        <Button
            android:id="@+id/clearTextButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignEnd="@id/etCardNumber"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_close_button" />

        <EditText
            android:id="@+id/etCardHolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCardNumber"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/deeksha_kundabarandady"
            android:padding="4dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etExpiryDate"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@id/etCardHolderName"
            android:layout_marginBottom="16dp"
            android:hint="@string/_01_28"
            android:padding="4dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCvv"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCardHolderName"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/_446"
            android:padding="4dp"
            android:textSize="20sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnAddNewCard"
        android:background="@drawable/btn_add_new_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRelativeLayout"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/add_new_card"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_update_profile"
        android:text="@string/update_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>